<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.application.markus.easymeal.com.application.markus.easymeal.LoginRegister"
    tools:showIn="@layout/activity_login_register"
    android:baselineAligned="false">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/list_bg">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">


                <ScrollView
                    android:id="@+id/register_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/RegistreContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imgUserRegister"
                                android:layout_width="200dp"
                                android:layout_height="200dp"

                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"
                                android:cropToPadding="false"
                                app:srcCompat="@drawable/ic_add_a_photo_black_48dp" />
                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/nombreRegistro"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:ems="10"
                                android:hint="@string/nombre_obligatorio"
                                android:inputType="textCapWords|textPersonName"
                                android:maxLength="50" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/apodoRegistro"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:ems="10"
                                android:hint="@string/apodo_4_caract"
                                android:inputType="textPersonName"
                                android:maxLength="15" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/passwordRegistro"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:ems="10"
                                android:hint="@string/contraseña_6_caract"
                                android:inputType="textPassword"
                                android:maxLength="25" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/passwordRegistroConfirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:ems="10"
                                android:hint="@string/confirmar_contraseña"
                                android:inputType="textPassword"
                                android:maxLength="25" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/fechaNacRegistro"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/fecha_nacimiento"
                                    android:inputType="none" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btndatePicker"
                                android:layout_width="350dp"
                                android:layout_height="40dp"
                                android:layout_weight="8"
                                android:background="@drawable/ic_calendar"
                                android:onClick="datePicker"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:onClick="insert"
                            android:text="@string/crear_cuenta" />

                    </LinearLayout>

                </ScrollView>

                <LinearLayout
                    android:id="@+id/loginContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contextClickable="false"
                    android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/email_login_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <AutoCompleteTextView
                                    android:id="@+id/nomLogin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/apodo"
                                    android:inputType="textPersonName"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/passwordLogin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/contraseña"
                                    android:imeActionId="@+id/login"
                                    android:imeActionLabel="@string/entrar_usuario"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btnLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:onClick="login"
                                android:text="@string/entrar_usuario"
                                android:backgroundTint="@color/colorPrimary" />

                        </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</LinearLayout>