<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_bg"
    android:orientation="vertical"
    android:padding="20dp"
    android:isScrollContainer="true"
    tools:context="com.application.markus.easymeal.com.application.markus.easymeal.NewRecipe">

    <LinearLayout
        android:id="@+id/layoutNewRecipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCreacionReceta"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_add_a_photo_black_48dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_creacion_receta"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/etCreacionDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/desc_creacion_receta"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:editable="false"
                android:text="@string/ingredientes"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCreacionIng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewIng"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnAddIng"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/ic_add_box_black_24dp"
                            android:backgroundTint="?android:attr/colorForeground" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/txtPasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="20dp"
                android:text="@string/pasos"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCreacionPasos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewPasos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|bottom"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnAddPaso"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="end|bottom"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/ic_add_box_black_24dp"
                            android:backgroundTint="?android:attr/colorForeground" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
